recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:15: error: expected start of definition
	override def run() {
                 ^Spiral:19: error: Unmatched closing brace '}' ignored here
}
^